<resources>
    <string name="app_name">Zikr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dua_title">দোয়ার নাম</string>
    <string name="dua_arabic">আরবী দোয়া</string>
    <string name="dua_pronunciation">উচ্চারণ</string>
    <string name="dua_translation">অনুবাদ</string>
    <string name="enter_title">শুরু করার দোয়া</string>
    <string name="enter_arabic">بِسْمِ الله</string>
    <string name="enter_pronunciation">বিসমিল্লাহ্‌</string>
    <string name="enter_translation">আল্লাহ্‌র নামে শুরু</string>

    <string-array name="dua_list">
        <item>ঘুম থেকে উঠে</item>
        <item>বাথরুমে যাওয়ার সময়</item>
        <item>বাথরুম থেকে বের হবার সময়</item>
        <item>ঘর থেকে বেরোবার সময়</item>
        <item>যানবাহনে চরার সময়</item>
        <item>ঘরে প্রবেশের সময়</item>
        <item>খাওয়ার শুরুতে</item>
        <item>খাওয়ার শেষে</item>
        <item>বিপদে পড়লে</item>
        <item>ঘুমানোর আগে</item>
    </string-array>

    <string-array name="arabic">
        <item>الحَمْـدُ لِلّهِ الّذي أَحْـيانا بَعْـدَ ما أَماتَـنا وَإليه النُّـشور</item>
        <item>اللَّهُمَّ إِنِّي أَعُوْذُ بِكَ مِنَ الْخُبُثِ وَالْخَبَائِثِ</item>
        <item>غُفْـرانَك</item>
        <item>بِسْمِ اللهِ ، تَوَكَّلْـتُ عَلى اللهِ وَلا حَوْلَ وَلا قُـوَّةَ إِلاّ بِالله</item>
        <item>بِسْـمِ اللهِ وَالْحَمْـدُ لله، سُـبْحانَ الّذي سَخَّـرَ لَنا هذا وَما كُنّا لَهُ مُقْـرِنين، وَإِنّا إِلى رَبِّنا لَمُنـقَلِبون، الحَمْـدُ لله، الحَمْـدُ لله، الحَمْـدُ لله، اللهُ أكْـبَر، اللهُ أكْـبَر، اللهُ أكْـبَر، سُـبْحانَكَ اللّهُـمَّ إِنّي ظَلَـمْتُ نَفْسي فَاغْـفِرْ لي، فَإِنَّهُ لا يَغْفِـرُ الذُّنوبَ إِلاّ أَنْـت</item>
        <item>بِسْـمِ اللهِ وَلَجْنـا، وَبِسْـمِ اللهِ خَـرَجْنـا، وَعَلـى رَبِّنـا تَوَكّلْـنا</item>
        <item>بِسْمِ الله\n بِسْمِ اللهِ في أَوَّلِهِ وَآخِـرِه</item>
        <item>الْحَمْـدُ للهِ الَّذي أَطْعَمَنـي هـذا وَرَزَقَنـيهِ مِنْ غَـيْرِ حَوْلٍ مِنِّي وَلا قُوَّة</item>
        <item>لَا إِلَهَ إِلَّا أنْـت سُـبْحانَكَ إِنِّي كُنْـتُ مِنَ الظّـالِميـن</item>
        <item>بِاسْـمِكَ اللّهُـمَّ أَمـوتُ وَأَحْـيا</item>
    </string-array>

    <string-array name="uccharon">

        <item>উচ্চারণঃ আলহামদুলিল্লাহিল্লাযি আহইয়া না বা\'দামা আমা তানা ওয়া ইলাইহিন নুশুর </item>
        <item>উচ্চারণঃ আল্লাহুম্মা ইন্নি আঊ\'যুবিকা মিনাল খুবসি ওয়াল খাবা-ইস</item>
        <item>উচ্চারণঃ গুফরা-নাকা</item>
        <item>উচ্চারণঃ বিসমিল্লা-হি তাওয়াক্কালতু \'আলাল্লাহি ওয়া লা হাওলা ওয়া লা ক্বুউওয়াতা ইল্লা বিল্লাহ</item>
        <item>উচ্চারণঃ বিসমিল্লাহি আল হামদু লিল্লাহি সুবহানাল্লাযি সাখখারা লানা হা যা ওয়ামা কুন্না লাহু মুক্বরিনিনা ওয়া ইন্না ইলা রাব্বিনা লামুন ক্বালিবুন।আলহামদুলিলাহ, আলহামদুলিল্লাহ, আলহামদুলিল্লাহ। আল্লাহু আকবার, আল্লাহু আকবার, আল্লাহু আকবার।  সুবহানাকা আল্লাহুম্মা ইন্নি যোয়ালামতু নাফসি ফাগফিরলি ফা ইন্নাহু লা ইয়াগফিরুযযুনুবা ইল্লা আনতা</item>
        <item>উচ্চারণঃ বিসমিল্লাহি ওয়া লাজনা , ওয়া বিসমিল্লাহি খারাজনা, ওয়া \'আলা রাব্বানা তাওয়াক্কালনা</item>
        <item>উচ্চারণঃ বিসমিল্লাহ\nবিসমিল্লাহি ফি আওয়ালিহি ওয়া আখিরিহি(প্রথমে ভুলে গেলে)</item>
        <item>উচ্চারণঃ আলহামদুলিল্লাহিল্লাযি আত \'আমানি হাযা ওয়া রাযাকানিহি মিন গাইরি হাওলিম্মিন্নি ওয়ালা ক্বুওয়াতিন</item>
        <item>উচ্চারণঃ লা ইলাহা ইল্লা আনতা সুবহানাকা ইন্নি কুনতু মিনায যোয়ালিমিন</item>
        <item>উচ্চারণঃ বিসমিকা আল্লাহুম্মা আমুতু ওয়া আহইয়া </item>

    </string-array>

    <string-array name="onubad">

        <item>অর্থঃ যাবতীয় প্রশংসা সেই আল্লাহর যিনি আমার (নিদ্রারূপ)মৃত্যুর পর আমাকে (পুনর্জাগরিত করে)জীবিত করলেন, আর তাঁর ই দরবারে সকলের পূনরুথান হবে।</item>
        <item>অর্থঃ হে আল্লাহ, আমি তোমার কাছে অপবিত্র জিন নর ও নারীর (অনিষ্ট )থেকে আশ্রয় কামনা করি।</item>
        <item>অর্থঃ হে আল্লাহ, তোমার কাছে ক্ষমা প্রার্থনা করছি।</item>
        <item>অর্থঃ আল্লাহ তা\'আলার নাম নিয়ে তাঁর ই উপর ভরসা করে ঘর থেকে বের হলাম। আল্লাহর দয়া ছাড়া মূলতঃ কোন শক্তি নেই অসৎ কাজ থেকে বেঁচে থাকার এবং সৎ কাজ করার।</item>
        <item>অর্থঃ আমি আল্লাহর নামে সওয়ার করছি, যাবতীয় প্রশংশা আল্লাহর জন্য পবিত্র সেই মহান সত্তা যিনি উহাকে আমাদের জন্য বশীভূত করে দিয়েছেন যদিও আমরা ঊহাকে বশীভূত করতে সক্ষম ছিলাম না, আর আমরা অবশ্যই ফিরে যাব আমাদের পালন কর্তার দিকে। আলহামদুলিলাহ, আলহামদুলিল্লাহ, আলহামদুলিল্লাহ। আল্লাহু আকবার, আল্লাহু আকবার, আল্লাহু আকবার। হে আল্লাহ, তুমি পবিত্র, আমি আমার সত্তার উপর জুলুম করেছি, অতএব তুমি ছাড়া আমাকে ক্ষমা করার আর কেহ নেই।</item>
        <item>অর্থঃ আমরা আল্লাহর নামে প্রবেশ করি, আল্লাহর নামেই(ঘর)থেকে বের হই, এবং আমাদের পালনকর্তা আল্লাহর উপর ই আমরা ভরসা করি।</item>
        <item>অর্থঃ আল্লাহর নামে শুরু করছি, শুরুতে এবং শেষে।</item>
        <item>অর্থঃ যাবতীয় প্রশংসা সেই আল্লাহর যিনি আমাকে এ পানাহার করালেন এবং উহার ক্ষমতা প্রদান করলেন, যাতে ছিলনা আমার পক্ষ থেকে উপায়-উদ্যোগ, ছিলনা কোন শক্তি-ক্ষমতা।</item>
        <item>অর্থঃ তুমি ভিন্ন ইবাদাতের কোন উপাস্য নেই। তুমি পবিত্র। নিশ্চই আমি জালিমদের অন্তর্ভুক্ত।</item>
        <item>অর্থঃ হে আল্লাহ, তোমার নাম নিয়েই আমি ঘুমাই এবং তোমার নাম নিয়েই জাগ্রত হব।</item>

    </string-array>

    <string name="about_text">সুতরাং তোমরা আমাকে স্মরণ কর আমি তোমাদের স্মরণ রাখব। আর তোমরা আমার প্রতি শুকরিয়া আদায় কর এবং আমার নিয়ামতের অস্বীকার কর না।\n\nসূরা আল-বাক্বারা-১৫২\n\nআর আল্লাহকে বেশী বেশী স্মরণকারী নর ও নারী, আল্লাহ তাদের জন্য ক্ষমা ও বিশেষ প্রতিদান প্রস্তুত রেখেছেন।\n\nসূরা আহযাব-৩৫\n\nহে মুমিনগণ! আল্লাহকে অধিক পরিমাণ স্মরণ কর।\n\nসূরা আহযাব-৪১\n\nতোমরা তোমাদের পালনকর্তা কে স্মরণ কর মনের মধ্যে নম্রতার সাথে ও ভীতি সহকারে এবং উচ্চস্বরের পরিবর্তে নিম্নস্বরে সকাল সন্ধ্যায়(সর্বক্ষণ) আর তোমরা উদাসীন দের শামিল হয়ো না।\n\nসূরা আল-আরাফ-২০৫\n\n\n\nযে ব্যক্তি তার পালনকর্তার স্মরণ করে আর যে ব্যক্তি তার পালনকর্তার স্মরণ করেনা, তাদের মধ্যে উদাহরণ হল জীবিত এবং মৃত ব্যক্তির ন্যায়।\n\nসহীহ বুখারী\n\nপবিত্র কুর\'আন এবং সহীহ হাদীস থেকেই বুঝা যায় সর্বাবস্থায় আল্লাহর স্মরণ কতটা গুরুত্বপূর্ণ। এই অ্যাপ্লিকেশন এ মাত্র দশটি অতি গুরুত্বপূর্ণ দোয়ার সমন্বয় করা হয়েছে। আল্লাহ সুবহানাহু ওয়া তা\'আলা যেন এই চেষ্টা কবুল করেন। আমীন।</string>

</resources>